--- a/Building.xaml
+++ b/Building.xaml
@@ -212,6 +212,33 @@
                                 </TransformGroup>
                             </Rectangle.RenderTransform>
                         </Rectangle>
+
+                        <!-- Navigation Animation -->
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Height="63" Canvas.Left="760" Canvas.Top="506">
+
+                            <TextBlock Name="desc1" Text="This way to Faculty/Function hall" FontSize="18" FontWeight="Bold" FontFamily="Tw Cen MT" Foreground="Black"/>
+
+                            <ItemsControl x:Name="ArrowsContainer" HorizontalAlignment="Center">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
+                        </StackPanel>
+
+                        <StackPanel  Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Height="63" Canvas.Left="494" Canvas.Top="502">
+                            
+                            <TextBlock x:Name="desc2" Text="This way to Mezzanine" FontSize="24" FontWeight="Bold" FontFamily="Tw Cen MT" Foreground="Black" Height="34"/>
+
+                            <ItemsControl x:Name="ArrowsContainer2" HorizontalAlignment="Center">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Orientation="Horizontal"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
+                        </StackPanel>
                     </Canvas>
                 </ScrollViewer>
 
@@ -242,18 +269,8 @@
                     </Button>
                 </StackPanel>
             </Grid>
-            <!-- Navigation Animation -->
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,666,496,0">
-                <TextBlock Text="This way to Faculty" FontSize="24" FontWeight="Bold" FontFamily="Tw Cen MT" Foreground="Black" Margin="0,0,0,10"/>
 
-                <ItemsControl x:Name="ArrowsContainer" HorizontalAlignment="Center">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </StackPanel>
+
         </Grid>
     </Viewbox>
 </Window>
