--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,9 +11,18 @@
         WindowStyle="None" Background="#FFEAF2FF">
     <Viewbox  StretchDirection="Both">
         <Grid Background="#FFEAF2FF" HorizontalAlignment="Center" VerticalAlignment="Center" Height="1080" Width="1920">
-            <Rectangle Height="130" Margin="0,952,0,0" Stroke="#0B5793" Fill="#0B5793" Width="1920"/>
-            <Image Margin="0,0,167,130" Source="/assets/Icons/sti models.png" Stretch="Fill"/>
-            <Image x:Name="STI_ONN" Source="assets/STI ONN Logo transparent 3.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1228,10,0,0" Height="210" Width="334"/>
+            <Image Margin="0,0,-42,63" Source="/assets/sti calamba.png" Stretch="Fill" Opacity="0.45">
+                <Image.OpacityMask>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="White" Offset="1"/>
+                        <GradientStop Offset="0.97"/>
+                        <GradientStop Color="#AA545454" Offset="0.401"/>
+                    </LinearGradientBrush>
+                </Image.OpacityMask>
+            </Image>
+            <Rectangle Margin="0,976,0,-2" Stroke="#0B5793" Fill="#0B5793" Width="1920"/>
+            <Image x:Name="STI_ONN" Source="assets/STI ONN Logo transparent 3.png" HorizontalAlignment="Left" VerticalAlignment="Top" Height="210" Width="334" Margin="780,0,0,0"/>
             <Button x:Name="touch" Content="Touch to Start" HorizontalAlignment="Center" Margin="0,883,0,0" VerticalAlignment="Top" Height="120" Width="494" FontSize="60" FontFamily="Tw Cen MT" FontWeight="Bold" Foreground="black" BorderBrush="{x:Null}" Background="#FFD4D4D4" Opacity="0.85" Click="touch_Click_1">
                 <Button.Resources>
                     <Style TargetType="{x:Type Border}">
@@ -24,8 +33,8 @@
                     <DropShadowEffect BlurRadius="1" Opacity="0.75" Color="#FF656464"/>
                 </Button.Effect>
             </Button>
-            <Label x:Name="greet" Content="WELCOME STIERS!" HorizontalAlignment="Left" Margin="1053,457,0,0" VerticalAlignment="Top" FontSize="90" FontFamily="Tw Cen MT Condensed Extra Bold" FontWeight="Bold"/>
-            <Label Content="Be Future-Ready. Be STI." HorizontalAlignment="Left" Margin="1037,581,0,0" VerticalAlignment="Top" Height="92" Width="716" FontSize="62" FontFamily="Tw Cen MT" Foreground="#FF676767"/>
+            <Label x:Name="greet" Content="WELCOME STIERS!" HorizontalAlignment="Left" Margin="639,416,0,0" VerticalAlignment="Top" FontSize="90" FontFamily="Tw Cen MT Condensed Extra Bold" FontWeight="Bold"/>
+            <Label Content="Be Future-Ready. Be STI." HorizontalAlignment="Left" Margin="623,540,0,0" VerticalAlignment="Top" Height="92" Width="716" FontSize="62" FontFamily="Tw Cen MT" Foreground="#FF676767"/>
         </Grid>
     </Viewbox>
 </Window>
