--- a/Floor3.xaml
+++ b/Floor3.xaml
@@ -108,7 +108,7 @@
                     </MenuItem>
 
                     <!-- Third Floor Button -->
-                    <MenuItem Margin="-1,478,1,-540" FontSize="40" FontWeight="Bold" Background="#FF0B5793" FontFamily="Leelawadee">
+                    <MenuItem Margin="-1,478,1,-540" FontSize="25" FontWeight="Bold" Background="#FF0B5793" FontFamily="Leelawadee">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="3rd Floor" Margin="85,0,-86,0" Foreground="White" FontFamily="Leelawadee"/>
@@ -180,7 +180,7 @@
                         </Image>
 
                         <!-- Clickable Sections -->
-                        <Rectangle Name="clickableSection" Fill="Transparent" MouseDown="room301" Canvas.Left="342" Canvas.Top="293" Height="100" Width="88" HorizontalAlignment="Center" VerticalAlignment="Top">
+                        <Rectangle Name="clickableSection" Fill="transparent" MouseDown="room301" Canvas.Left="342" Canvas.Top="293" Height="100" Width="88" HorizontalAlignment="Center" VerticalAlignment="Top">
                             <Rectangle.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform ScaleX="1.068"/>
