--- a/Building.xaml
+++ b/Building.xaml
@@ -47,7 +47,7 @@
 
                     </Menu.ItemsPanel>
 
-                    <MenuItem Margin="0,9,0,-47" FontSize="40" FontWeight="Bold" Click="home_btn">
+                    <MenuItem Margin="-1,0,0,-25" FontSize="40" FontWeight="Bold" Click="home_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <Grid.RowDefinitions>
@@ -65,7 +65,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="-1,79,1,-141" FontSize="40" FontWeight="Bold" Click="announcement_btn">
+                    <MenuItem Margin="-1,30,1,-90" FontSize="40" FontWeight="Bold" Click="announcement_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="Announcement" Margin="85,0,0,0" FontFamily="Leelawadee" HorizontalAlignment="Left" Width="288"/>
@@ -78,8 +78,18 @@
 
                         </MenuItem.Icon>
                     </MenuItem>
+                    <MenuItem Margin="-1,100,0,-150" FontSize="40" FontWeight="Bold" Click="instructor_schedule_btn">
+                        <MenuItem.Header>
+                            <Grid>
+                                <TextBlock Text="Instructor" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
+                            </Grid>
+                        </MenuItem.Header>
+                        <MenuItem.Icon>
+                            <Image Source="/assets/Icons/instructor.png" Margin="45,-15,-81,-15" />
+                        </MenuItem.Icon>
+                    </MenuItem>
 
-                    <MenuItem Margin="-1,237,1,-299" FontSize="25" FontWeight="Bold" Background="#FF0B5793">
+                    <MenuItem Margin="-1,237,1,-299" FontSize="40" FontWeight="Bold" Background="#FF0B5793">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="Ground" Margin="85,0,-86,0" Foreground="White" FontFamily="Leelawadee"/>
@@ -93,7 +103,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="0,317,0,-379" FontSize="40" FontWeight="Bold" Click="mezzanine_btn">
+                    <MenuItem Margin="0,317,0,-379" FontSize="30" FontWeight="Bold" Click="mezzanine_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="Mezzanine" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
@@ -107,7 +117,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="1,398,-1,-460" FontSize="40" FontWeight="Bold" Click="floor2_btn">
+                    <MenuItem Margin="1,398,-1,-460" FontSize="30" FontWeight="Bold" Click="floor2_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="2nd Floor" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
@@ -121,7 +131,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="-1,478,1,-540" FontSize="40" FontWeight="Bold" Click="floor3_btn">
+                    <MenuItem Margin="-1,478,1,-540" FontSize="30" FontWeight="Bold" Click="floor3_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="3rd Floor" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
@@ -135,7 +145,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="1,558,-1,-620" FontSize="40" FontWeight="Bold" Click="floor4_btn">
+                    <MenuItem Margin="1,558,-1,-620" FontSize="30" FontWeight="Bold" Click="floor4_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="4th Floor" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
@@ -149,7 +159,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="-1,637,1,-699" FontSize="40" FontWeight="Bold" Click="roofdeck_btn">
+                    <MenuItem Margin="-1,637,1,-699" FontSize="30" FontWeight="Bold" Click="roofdeck_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="Roof Deck" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
@@ -163,7 +173,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="0,716,0,-778" FontSize="40" FontWeight="Bold" Click="court_btn">
+                    <MenuItem Margin="0,716,0,-778" FontSize="30" FontWeight="Bold" Click="court_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="Court" Margin="85,0,-86,0" FontFamily="Leelawadee"/>
@@ -258,8 +268,6 @@
                     </Button>
                 </StackPanel>
             </Grid>
-
-
         </Grid>
     </Viewbox>
 </Window>
