--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -24,15 +24,25 @@
             </Image>
             <Rectangle Margin="0,976,0,-2" Stroke="#0B5793" Fill="#0B5793" Width="1920"/>
             <Image x:Name="STI_ONN" Source="assets/STI ONN Logo transparent 3.png" HorizontalAlignment="center" VerticalAlignment="Top" Height="126" Width="334" Margin="0,10,0,0"/>
-            <Button x:Name="touch" Content="Touch to Start" HorizontalAlignment="Center" Margin="0,883,0,0" VerticalAlignment="Top" Height="120" Width="494" FontSize="60" FontFamily="Tw Cen MT" FontWeight="Bold" Foreground="black" BorderBrush="{x:Null}" Background="#FFD4D4D4" Opacity="0.85" Click="touch_Click_1">
-                <Button.Resources>
-                    <Style TargetType="{x:Type Border}">
-                        <Setter Property="CornerRadius" Value="50"/>
-                    </Style>
-                </Button.Resources>
-                <Button.Effect>
-                    <DropShadowEffect BlurRadius="1" Opacity="0.75" Color="#FF656464"/>
-                </Button.Effect>
+            <Button x:Name="touch" Content="Touch to Start" HorizontalAlignment="Center" Margin="0,883,0,0" VerticalAlignment="Top" Height="120" Width="494" FontSize="60" FontFamily="Tw Cen MT" FontWeight="Bold" Foreground="Black" BorderBrush="{x:Null}" Click="touch_Click_1">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Border CornerRadius="50" Opacity="0.8">
+                                <Border.Background>
+                                    <VisualBrush Visual="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}" />
+                                </Border.Background>
+                                <Border.Effect>
+                                    <BlurEffect Radius="100" KernelType="Gaussian" RenderingBias="Performance"/>
+                                </Border.Effect>
+                            </Border>
+                            <Border Background="#66ADADAD" CornerRadius="50" />
+
+                            <!-- Button Content -->
+                            <TextBlock Text="Touch to Start" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="60" FontFamily="Tw Cen MT" FontWeight="Bold" Foreground="Black"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Button.Template>
             </Button>
             <Label x:Name="greet" Content="WELCOME STIERS!" HorizontalAlignment="Left" Margin="639,416,0,0" VerticalAlignment="Top" FontSize="90" FontFamily="Tw Cen MT Condensed Extra Bold" FontWeight="Bold"/>
             <Label Content="Be Future-Ready. Be STI." HorizontalAlignment="Left" Margin="631,540,0,0" VerticalAlignment="Top" Height="92" Width="633" FontSize="62" FontFamily="Tw Cen MT" Foreground="#FF676767"/>
